<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/firecamp_bg"
    tools:context=".Register">

    <TextView
        android:id="@+id/create_account2"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/create_account2"
        android:textColor="#F44336"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <EditText
        android:id="@+id/reg_Password"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/password1"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#FF5722"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/reg_conf_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_phone"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_sc"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#FF5722"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <EditText
        android:id="@+id/reg_full_name"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_sc"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FF5722"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/reg_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/reg_username"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/username2"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FF5722"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <EditText
        android:id="@+id/reg_phone"
        android:layout_width="202dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_sc"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="#FF5722"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/reg_conf_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889" />

    <EditText
        android:id="@+id/reg_CountryCode"
        android:layout_width="69dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_sc"
        android:hint="@string/code"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FF5722"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/reg_conf_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

    <EditText
        android:id="@+id/reg_conf_password"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginBottom="116dp"
        android:ems="10"
        android:hint="@string/password2"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#FF5722"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_Password" />

    <Button
        android:id="@+id/btn_Already_Registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/already_registered"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toEndOf="@+id/btn_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

</androidx.constraintlayout.widget.ConstraintLayout>